--- a/app/src/main/res/layout/activity_forrum_detail.xml
+++ b/app/src/main/res/layout/activity_forrum_detail.xml
@@ -134,11 +134,11 @@
             android:id="@+id/comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="32dp"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@id/forum_description"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
                 android:id="@+id/totalComments"
@@ -146,14 +146,17 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/firasans"
                 android:text="0"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="14sp" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_comment" />
+                android:textColor="@android:color/darker_gray"
+                android:fontFamily="@font/firasans"
+                android:textSize="14sp"
+                android:text="Komentar"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
