--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.EditName">
+    tools:context=".activity.ChangePassword">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="@font/nexabold"
-            android:text="UBAH NAMA"
+            android:text="UBAH PASSWORD"
             android:textColor="@android:color/white"
             android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="@id/toolBar"
@@ -44,43 +44,87 @@
             android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/background_button_submit"
-            android:orientation="vertical"
-            android:paddingStart="24dp"
-            android:paddingTop="24dp"
-            android:paddingEnd="24dp"
-            android:paddingBottom="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolBar">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/background_button_submit"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:paddingTop="24dp"
+            android:paddingBottom="50dp"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Password Lama"
                 android:fontFamily="@font/firasans"
-                android:text="Nama"
                 android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
             <EditText
-                android:id="@+id/userName"
+                android:id="@+id/oldPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_person_purple_dark"
                 android:fontFamily="@font/firasans"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
                 android:paddingStart="8dp"
                 android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Password Baru"
+                android:fontFamily="@font/firasans"
+                android:textColor="@color/purpleDark"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/newPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:inputType="textPassword"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Re-Type"
+                android:fontFamily="@font/firasans"
+                android:textColor="@color/purpleDark"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/reTypeNewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:inputType="textPassword"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin" />
         </LinearLayout>
 
         <View
