--- a/app/src/main/res/layout/activity_my_forum.xml
+++ b/app/src/main/res/layout/activity_my_forum.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AllSpecialists">
+    tools:context=".activity.MyForum">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="@font/firasans"
-            android:text="SPECIALIST"
+            android:text="FORUM"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -81,7 +81,7 @@
             app:layout_constraintTop_toBottomOf="@id/title" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/specialistRecyclerView"
+            android:id="@+id/forumRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
