--- a/app/src/main/res/layout/fragment_register_specialist.xml
+++ b/app/src/main/res/layout/fragment_register_specialist.xml
@@ -59,6 +59,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/firasans"
+        android:text="Keahlian"
+        android:textColor="@color/purpleDark"
+        android:textSize="12sp" />
+
+    <EditText
+        android:id="@+id/specialistSkill"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/purpleDark"
+        android:drawableEnd="@drawable/ic_store_purple_dark"
+        android:fontFamily="@font/firasans"
+        android:inputType="textEmailAddress"
+        android:paddingStart="8dp"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:id="@+id/chipGroupSkill" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/firasans"
         android:text="Email"
         android:textColor="@color/purpleDark"
         android:textSize="12sp" />
