--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="@font/firasans"
-            android:text="F O R U M"
+            android:text="FORUM"
+            android:textStyle="bold"
             android:textColor="@android:color/white"
             android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="@id/toolBar"
