--- a/app/src/main/res/layout/fragment_register_specialist.xml
+++ b/app/src/main/res/layout/fragment_register_specialist.xml
@@ -68,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purpleDark"
-        android:drawableEnd="@drawable/ic_store_purple_dark"
+        android:drawableEnd="@drawable/ic_skill_purple_dark"
         android:fontFamily="@font/firasans"
         android:inputType="textEmailAddress"
         android:paddingStart="8dp"
@@ -82,6 +82,30 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:id="@+id/chipGroupSkill" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/firasans"
+        android:text="Nomor Telepon"
+        android:textColor="@color/purpleDark"
+        android:textSize="12sp" />
+
+
+    <EditText
+        android:id="@+id/phoneNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:backgroundTint="@color/purpleDark"
+        android:drawableEnd="@drawable/ic_phone_purple_dark"
+        android:fontFamily="@font/firasans"
+        android:inputType="phone"
+        android:paddingStart="8dp"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
     <TextView
         android:layout_width="wrap_content"
