--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -45,7 +45,7 @@
         app:layout_constraintBottom_toBottomOf="@id/backBtn" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/chatName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
