--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -6,13 +6,28 @@
     android:layout_marginBottom="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/senderName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/purpleDark"
+        android:fontFamily="@font/firasans"
+        android:textSize="14sp"
+        android:text="Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/bubbleChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/total_background"
+        android:textColor="@android:color/black"
+        android:fontFamily="@font/firasans"
+        android:layout_marginTop="8dp"
+        android:textSize="14sp"
         android:padding="@dimen/activity_vertical_margin"
         android:text="Left Chat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/senderName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
