--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -78,17 +78,25 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnForgotPass"
-        android:layout_width="150dp"
+    <View
+        android:id="@+id/btnSubmit"
+        android:layout_width="60dp"
         android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@id/linear1"
-        app:layout_constraintStart_toStartOf="@id/linear1"
-        app:layout_constraintEnd_toEndOf="@id/linear1"
-        app:layout_constraintBottom_toBottomOf="@id/linear1"
         android:background="@drawable/background_button_login_register"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:text="Submit" />
+        app:layout_constraintBottom_toBottomOf="@id/linear1"
+        app:layout_constraintEnd_toEndOf="@id/linear1"
+        app:layout_constraintStart_toStartOf="@id/linear1"
+        app:layout_constraintTop_toBottomOf="@id/linear1" />
+
+    <View
+        android:layout_width="16dp"
+        android:layout_height="25dp"
+        android:background="@drawable/ic_arrow_white"
+        app:layout_constraintBottom_toBottomOf="@id/btnSubmit"
+        app:layout_constraintEnd_toEndOf="@id/btnSubmit"
+        app:layout_constraintStart_toStartOf="@id/btnSubmit"
+        app:layout_constraintTop_toTopOf="@id/btnSubmit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
