--- a/app/src/main/res/layout/activity_register_specialist.xml
+++ b/app/src/main/res/layout/activity_register_specialist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.Register">
+    tools:context=".activity.RegisterSpecialist">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="@font/nexabold"
-            android:text="DAFTAR"
+            android:text="D A F T A R"
             android:textColor="@android:color/white"
             android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="@id/toolBar"
@@ -77,6 +77,83 @@
                 android:drawableEnd="@drawable/ic_person_purple_dark"
                 android:fontFamily="@font/firasans"
                 android:inputType="textEmailAddress"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Nama Usaha"
+                android:textColor="@color/purpleDark"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/businessName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_store_purple_dark"
+                android:fontFamily="@font/firasans"
+                android:inputType="textEmailAddress"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Keahlian"
+                android:textColor="@color/purpleDark"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/skill"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_skill_purple_dark"
+                android:fontFamily="@font/firasans"
+                android:inputType="textEmailAddress"
+                android:hint="Tekan enter untuk menambahkan"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroupSkill"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Nomor Telepon"
+                android:textColor="@color/purpleDark"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/phoneNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_phone_purple_dark"
+                android:fontFamily="@font/firasans"
+                android:inputType="phone"
                 android:paddingStart="8dp"
                 android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -188,17 +265,6 @@
             app:layout_constraintEnd_toEndOf="@id/btnRegister"
             app:layout_constraintStart_toStartOf="@id/btnRegister"
             app:layout_constraintTop_toBottomOf="@id/btnRegister" />
-
-        <Button
-            android:id="@+id/specialistRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginEnd="32dp"
-            android:text="Daftar sebagai Specialist"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/haveAccount" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
