--- a/app/src/main/res/layout/activity_specialist_detail.xml
+++ b/app/src/main/res/layout/activity_specialist_detail.xml
@@ -127,12 +127,20 @@
                     android:src="@drawable/ic_skill_purple_dark" />
 
                 <TextView
-                    android:id="@+id/specialistSkills"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/firasans"
-                    android:text="Keahlian : Laptop, Hp"
+                    android:text="Keahlian : "
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/specialistSkills"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/firasans"
+                    android:text="Laptop, Hp"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
             </LinearLayout>
