--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -194,7 +194,7 @@
                         android:ems="10"
                         android:maxLength="8"
                         android:fontFamily="@font/firasans"
-                        android:hint="Tag (optional)"
+                        android:hint="Tag"
                         android:inputType="text"
                         android:padding="@dimen/activity_vertical_margin"
                         android:textColor="@android:color/black"
