--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/firasans"
-            android:text="DR"
+            android:text="..."
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/userPic"
@@ -168,22 +168,24 @@
         <TableLayout
             android:id="@+id/table"
             android:layout_width="wrap_content"
-            android:visibility="gone"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/total"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/total"
             app:layout_constraintStart_toStartOf="@id/total"
-            app:layout_constraintEnd_toEndOf="@id/total">
+            app:layout_constraintTop_toBottomOf="@id/total">
+
             <TableRow>
+
                 <LinearLayout
                     android:id="@+id/forum"
                     android:layout_width="wrap_content"
-                    android:paddingStart="32dp"
-                    android:paddingEnd="32dp"
                     android:layout_height="56dp"
                     android:layout_marginEnd="12dp"
                     android:background="@drawable/background_main_feature"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:paddingStart="32dp"
+                    android:paddingEnd="32dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -212,11 +214,11 @@
                     android:id="@+id/specialist"
                     android:layout_width="wrap_content"
                     android:layout_height="56dp"
-                    android:paddingStart="22dp"
-                    android:paddingEnd="22dp"
                     android:layout_gravity="end"
                     android:background="@drawable/background_main_feature"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:paddingStart="22dp"
+                    android:paddingEnd="22dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -295,6 +297,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleSpecialist" />
+
+        <TextView
+            android:id="@+id/textNoData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:fontFamily="@font/firasans"
+            android:gravity="center"
+            android:text="Tidak ada ada"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/table" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
