--- a/app/src/main/res/layout/fragment_login_specialist.xml
+++ b/app/src/main/res/layout/fragment_login_specialist.xml
@@ -17,7 +17,7 @@
 
 
     <EditText
-        android:id="@+id/emailSpecialist"
+        android:id="@+id/specialistEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
@@ -29,7 +29,7 @@
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
 
 
     <EditText
-        android:id="@+id/passwordSpecialist"
+        android:id="@+id/specialistPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purpleDark"
@@ -52,5 +52,5 @@
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
 </LinearLayout>
