--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -137,7 +137,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/firasans"
                 android:maxLines="1"
-                android:text="Belum ada komentar"
+                android:text="Loading..."
                 android:textColor="@android:color/black"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -182,7 +182,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/firasans"
                 android:maxLines="1"
-                android:text="Belum ada komentar"
+                android:text="Loading..."
                 android:textColor="@android:color/black"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -218,7 +218,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/firasans"
                 android:maxLines="1"
-                android:text="Belum ada komentar"
+                android:text="Loading..."
                 android:textColor="@android:color/black"
                 android:textSize="14sp" />
         </LinearLayout>
