--- a/app/src/main/res/layout/activity_specialist_detail.xml
+++ b/app/src/main/res/layout/activity_specialist_detail.xml
@@ -104,7 +104,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/userPic" />
 
+        <ToggleButton
+            android:id="@+id/favoriteBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_unfavorite"
+            android:textOff=""
+            android:textOn=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/linear1"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
+
         <LinearLayout
+            android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
